cabal-version:      2.4
name:               backend
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Angel Dijoux
maintainer:         angel.dijoux@yahoo.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable backend
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends: base ^>=4.13.0.0
                 , aeson
                 , scotty
                 , warp
                 , http-types
                 , blaze-html
                 , wai-extra
                 , wai-middleware-static
                 , bytestring 
                 , postgresql-simple
                 , dotenv
                 , time
    hs-source-dirs:   app
    default-language: Haskell2010
